Updated peers version

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   "main": "dist/react-native-peerjs.js",
   "devDependencies": {
     "parcel": "^1.12.3",
-    "peerjs": "1.1.0"
+    "peerjs": "~1.3"
   }
 }
