--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "react-native-peerjs",
-  "version": "1.0.4",
+  "name": "@thyreality-inc/react-native-peerjs",
+  "version": "1.4.7",
   "description": "react-native-webrtc + peerjs",
   "keywords": [
     "webrtc",
     "react native",
     "peerjs"
   ],
-  "repository": "https://github.com/Zemke/react-native-peerjs",
-  "author": "Zemke <florian@zemke.io>",
+  "repository": "https://github.com/ThyReality-Inc/react-native-peerjs",
+  "author": "Thyreality Inc.",
   "license": "MIT",
   "scripts": {
-    "build": "./build.sh",
-    "prepare": "./build.sh"
+    "build": "build.sh",
+    "prepare": "build.sh"
   },
   "main": "dist/react-native-peerjs.js",
   "devDependencies": {
     "parcel": "^1.12.3",
-    "peerjs": "~1.3"
+    "peerjs": "1.4.7"
   }
 }
