--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thyreality-inc/react-native-peerjs",
-  "version": "1.4.7",
+  "version": "1.4.8",
   "description": "react-native-webrtc + peerjs",
   "keywords": [
     "webrtc",
@@ -11,12 +11,15 @@
   "author": "Thyreality Inc.",
   "license": "MIT",
   "scripts": {
-    "build": "build.sh",
+    "preinstall": "npx npm-force-resolutions",
     "prepare": "build.sh"
   },
   "main": "dist/react-native-peerjs.js",
   "devDependencies": {
-    "parcel": "^1.12.3",
-    "peerjs": "1.4.7"
+    "parcel": "1.12.3",
+    "peerjs": "1.0.5"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.13.8"
   }
 }
