--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thyreality-inc/react-native-peerjs",
-  "version": "1.4.8",
+  "version": "1.4.9",
   "description": "react-native-webrtc + peerjs",
   "keywords": [
     "webrtc",
@@ -10,10 +10,7 @@
   "repository": "https://github.com/ThyReality-Inc/react-native-peerjs",
   "author": "Thyreality Inc.",
   "license": "MIT",
-  "scripts": {
-    "preinstall": "npx npm-force-resolutions",
-    "prepare": "build.sh"
-  },
+  "scripts": {},
   "main": "dist/react-native-peerjs.js",
   "devDependencies": {
     "parcel": "1.12.3",
@@ -21,5 +18,6 @@
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
-  }
+  },
+  "types": "index.d.ts"
 }
