--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@thyreality-inc/react-native-peerjs",
+  "name": "@hongtangyun/react-native-peerjs",
   "version": "1.5.1",
   "description": "react-native-webrtc + peerjs",
   "keywords": [
@@ -7,13 +7,15 @@
     "react native",
     "peerjs"
   ],
-  "repository": "https://github.com/ThyReality-Inc/react-native-peerjs",
-  "author": "Thyreality Inc.",
+  "repository": "https://github.com/dagouzhi/react-native-peerjs",
+  "author": "dgz",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "build": "bash ./build.sh"
+  },
   "main": "dist/react-native-peerjs.js",
   "devDependencies": {
-    "peerjs": "1.4.8",
+    "peerjs": "1.4.7",
     "parcel": "1.12.3"
   },
   "resolutions": {
